[package]
name = "orbit_agent"
version = "0.1.0"
edition = "2021"
authors = ["Or Gur Arie <orgurar@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = {version = "0.3", features = ["wincon", "winuser"]}
winreg = "0.6.0"